include $(top_srcdir)/binaries_common.mk


bin_PROGRAMS = identity_cg identity_qmr identity_cgs identity_bicg identity_bicgstab identity_tfqmr identity_cheby identity_richardson

identity_cg_SOURCES = identity_cg.cc
identity_cg_LDFLAGS = -lboost_program_options -lboost_filesystem

identity_qmr_SOURCES = identity_qmr.cc
identity_qmr_LDFLAGS = -lboost_program_options -lboost_filesystem

identity_cgs_SOURCES = identity_cgs.cc
identity_cgs_LDFLAGS = -lboost_program_options -lboost_filesystem

identity_bicg_SOURCES = identity_bicg.cc
identity_bicg_LDFLAGS = -lboost_program_options -lboost_filesystem

identity_bicgstab_SOURCES = identity_bicgstab.cc
identity_bicgstab_LDFLAGS = -lboost_program_options -lboost_filesystem

identity_tfqmr_SOURCES = identity_tfqmr.cc
identity_tfqmr_LDFLAGS = -lboost_program_options -lboost_filesystem

identity_cheby_SOURCES = identity_cheby.cc
identity_cheby_LDFLAGS = -lboost_program_options -lboost_filesystem

identity_richardson_SOURCES = identity_richardson.cc
identity_richardson_LDFLAGS = -lboost_program_options -lboost_filesystem

