lib_LTLIBRARIES = libdesolin.la
libdesolin_la_CPPFLAGS = -I$(top_srcdir)/include
libdesolin_la_SOURCES = Exceptions.cpp ConfigurationManager.cpp StatisticsCollector.cpp tg/Exceptions.cpp tg/NameGenerator.cpp tg/ParameterHolder.cpp file-access/iohb.c file-access/mmio.c
libdesolin_la_LDFLAGS = -ltaskgraph
