include $(top_srcdir)/binaries_common.mk

bin_PROGRAMS = identity_cg identity_qmr identity_cgs identity_bicg identity_bicgstab identity_tfqmr identity_cheby identity_richardson
identity_cg_SOURCES = identity_cg.cpp
identity_qmr_SOURCES = identity_qmr.cpp
identity_cgs_SOURCES = identity_cgs.cpp
identity_bicg_SOURCES = identity_bicg.cpp
identity_bicgstab_SOURCES = identity_bicgstab.cpp
identity_tfqmr_SOURCES = identity_tfqmr.cpp
identity_cheby_SOURCES = identity_cheby.cpp
identity_richardson_SOURCES = identity_richardson.cpp
